# microservices-rust

./: Cargo.toml  README.md
auth/: Cargo.toml  build.rs
auth/src/: auth.rs  errors.rs  main.rs  sessions.rs  users.rs
auth/src/sessions/: memory.rs
auth/src/users/: memory.rs
client/: Cargo.toml  build.rs
client/src/: main.rs
health-check/: Cargo.toml
health-check/src/: main.rs
proto/: authentication.proto
