[workspace]
members = ["auth", "client", "health-check"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
prost = "0.14.3"
rand = "0.10.1"
rand_core = { version = "0.6", features = ["std"] }
tokio = { version = "1.52.3", features = ["full"] }
tonic = "0.14.6"
uuid = { version = "1.23.1", features = ["v4"] }
tonic-prost-build = "0.14.6"
tonic-prost = "0.14.6"
pbkdf2 = { version = "0.12", features = ["simple"] }   # used by auth service
