[package]
name = "auth"
version.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true
rand_core.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true
pbkdf2.workspace = true
tonic-prost.workspace = true
thiserror.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

