[package]
name = "client"
version.workspace = true
edition.workspace = true
[dependencies]
clap.workspace = true
prost.workspace = true
rand_core.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

